--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
 .App {
+  font-family: 'Merriweather', serif;
+}
+
+.header-banner {
+  position: relative;
+  background-image: url('https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/healthy-groceries-1525213305.jpg?crop=1.00xw:0.817xh;0,0.0977xh&resize=980:*');
+  background-position: center;
+  height: 13vh;
+  display: flex;
+  align-items: center;
+}
+
+.header-banner:before {
+  content: "";
+  position: absolute;
+  background-color: rgba(201, 152, 46, 0.61);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.header-banner h1 {
+  color: black;
+  position: relative;
+  left: 5%;
+  font-weight: 700;
+}
+
+.search {
   text-align: center;
+  font-size: 1.2rem;
+  margin: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search input {
+  width: 300px;
+  font-size: 1.4rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-add-item {
+  margin: 15px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.add-item {
+  width: 50vw;
+  height: 1.8rem;
+  font-size: 1.2rem;
+}
+
+.item-num {
+  margin-left: 3px;
+  width: 40px;
+  font-size: 1.2rem;
+}
+
+.form-add-item button {
+  margin-left: 25px;
+  font-size: 1rem;
+  width: 50px;
+}
+
+.item-list {
+  list-style: none;
+  /* margin-left: 15%; */
+  width: 90%;
   display: flex;
   flex-direction: column;
+  align-items: space-around;
+}
+
+.item-checkbox {
+  height: 25px;
+  width: 25px;
+}
+
+.item-list li label {
+  /* width: 100px; */
+  font-size: 1.3rem;
+}
+
+.footer {
+  position: fixed;
+  height: 50px;
+  bottom: 1vh;
+  width: 100%;
+  background-color: rgba(167, 123, 14, 0.87);
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer p {
+  position: relative;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
