--- a/src/App.css
+++ b/src/App.css
@@ -28,19 +28,8 @@
   font-weight: 700;
 }
 
-.search {
-  text-align: center;
-  font-size: 1.2rem;
-  margin: 10px;
-}
-
-.search input {
-  width: 300px;
-  font-size: 1.4rem;
-}
-
 .form-add-item {
-  margin: 15px;
+  margin: 5px;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -59,28 +48,101 @@
 }
 
 .form-add-item button {
-  margin-left: 25px;
-  font-size: 1rem;
-  width: 50px;
+  margin-left: 15px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(182, 139, 47, 0.849);
+  border-radius: 4px;
+  border: solid saddlebrown 2px;
+  color: saddlebrown;
+}
+
+.form-add-item button:hover {
+  background-color: saddlebrown;
+  cursor: pointer;
+  color: whitesmoke;
+}
+
+.form-add-item button svg {
+  font-size: 1.3rem;
+}
+
+.search {
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 3px;
+}
+
+.search label {
+  display: none;
+}
+
+.search input {
+  width: 40vw;
+  font-size: 1.2rem;
+  height: 1.8rem;
+  border: solid rgb(85, 85, 85) 1px;
 }
 
 .item-list {
   list-style: none;
-  /* margin-left: 15%; */
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  align-items: space-around;
+  padding: 0px;
 }
 
 .item-checkbox {
-  height: 25px;
-  width: 25px;
+  transform: scale(2.3);
+}
+
+.item-checkbox:hover {
+  transform: scale(2.5);
+  cursor: pointer;
+}
+
+.line-item {
+  display: flex;
+  height: 50px;
+  padding: 5px 20px;
+  align-items: center;
+  background-color: rgb(167, 167, 167);
+  width: 85%;
+  transform: scale(1);
+  margin:  0 auto 10px;
+  border-radius: 5px;
+  transition: transform 0.1s linear;
+}
+
+.line-item:hover {
+  background-color: rgba(182, 139, 47, 0.849);
+  transform: scale(1.03);
+}
+
+@media only screen and (min-width: 768px) {
+  .line-item {
+    width: 60%;
+  }
 }
 
 .item-list li label {
-  /* width: 100px; */
+  font-size: 1.2rem;
+  margin-left: 15px;
+}
+
+.item-list li label:hover {
+  cursor: pointer;
+}
+
+.item-list li svg {
   font-size: 1.3rem;
+  margin-left: auto;
+  transform: scale(1.3);
+}
+
+.item-list li svg:hover {
+  color: rgb(209, 7, 7);
+  transform: scale(1.5);
+  cursor: pointer;
 }
 
 .footer {
@@ -88,7 +150,7 @@
   height: 50px;
   bottom: 1vh;
   width: 100%;
-  background-color: rgba(167, 123, 14, 0.87);
+  background-color: rgba(182, 139, 47, 0.849);
   display: flex;
   align-items: center;
   justify-content: center;
